--- a/landingPage.html
+++ b/landingPage.html
@@ -54,7 +54,7 @@
           </button>
           <button
             id="navRegister"
-            class="Register-button mx-auto lg:mx-0 hover:underline bg-blue-500 shadow-lg shadow-blue-500/50 text-white-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
+            class="Register-button mx-auto lg:mx-0 hover:underline bg-green-500 shadow-lg shadow-green-500/50 text-white-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
           onclick="redirectToRegister()">
             Register
           </button>
