--- a/landingPage.html
+++ b/landingPage.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>
-     Clinic
-    </title>
+    <title>Chit's Lying-in Clinic</title>
+    <link rel="icon" href="/image/logo.png" type="image/png">
+   
     <meta name="description" content="Simple landind page" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
@@ -44,12 +44,12 @@
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
-          <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-5xl" href="#">
+          <a class="toggleColour text-black no-underline  hover:no-underline font-bold text-2xl lg:text-5xl" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
             
             Chit's  Lying-in Clinic
           </a>
-        </div>
+        </div>  
         <div class="block lg:hidden pr-4">
         
           <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -86,7 +86,7 @@
     <div class="pt-24">
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
-        <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
+        <div class="flex flex-col text-black w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <h1 class="my-4 text-4xl font-bold leading-tight">
             Phil-Health Covered
           </h1>
