--- a/landingPage.html
+++ b/landingPage.html
@@ -118,8 +118,8 @@
     <section class="bg-white border-b py-8">
 
       <div>
-      <h3 class="my-4 text-4xl font-bold leading-tight text-center pt-24">About us :</h3>
-      <img class="center-image" src="image/About_us.png" alt="Chit's Catalog" width="1200" height="400" >
+      
+      <img class="center-image" src="image/MissionVision.png" alt="Chit's Catalog" width="1200" height="400" >
 
       </div>
       
