--- a/landingPage.html
+++ b/landingPage.html
@@ -66,7 +66,7 @@
           </ul>
           <button
             id="navLogin"
-            class="login-button mx-auto lg:mx-0 hover:underline bg-green-500 shadow-lg shadow-cyan-500/50 text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
+            class="login-button mx-auto lg:mx-0 hover:underline bg-green-500 shadow-lg shadow-cyan-500/50 text-white-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
             onclick="redirectToLogin()">
             Login
           </button>
