--- a/landingPage.html
+++ b/landingPage.html
@@ -128,7 +128,7 @@
       <img class="center-image" src="image/Catalog1.png " alt="Chit's Catalog" width="1200" height="400" >
       
       <div>   
-        <h3 class="my-4 text-4xl font-bold leading-tight text-center pt-24">You can Locate as at :</h3>
+        <h3 class="my-4 text-4xl font-bold leading-tight text-center pt-24">You can Locate us at :</h3>
         <p class="my-4 text-4xl font-bold leading-tight text-center">ZONE 2 BRGY. KITA-KITA , SAN JOSE CITY, NUEVA ECIJA</p>
       </div>
 
